fixex #1547 button overflow overlap issue

--- a/less/spinbox.less
+++ b/less/spinbox.less
@@ -31,6 +31,7 @@
 			padding-top: 0;
 			padding-right: 9px;
 			padding-left: 9px;
+			overflow-y: hidden;
 
 			&.disabled {
 				cursor: not-allowed;
